--- a/Content.Client/SS220/PdaIdPainter/PdaIdPainter.xaml
+++ b/Content.Client/SS220/PdaIdPainter/PdaIdPainter.xaml
@@ -1,7 +1,8 @@
-<DefaultWindow  xmlns="https://spacestation14.io"
-                MinSize="500 300"
-                SetSize="500 500"
-                Title="{Loc 'pda-id-painter-window-title'}">
+<controls:FancyWindow  xmlns="https://spacestation14.io"
+                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
+                       MinSize="500 300"
+                       SetSize="500 500"
+                       Title="{Loc 'pda-id-painter-window-title'}">
     <BoxContainer Orientation="Horizontal"
                   HorizontalExpand="True"
                   VerticalExpand="True"
@@ -46,4 +47,4 @@
         </BoxContainer>
     </BoxContainer>
 
-</DefaultWindow>
+</controls:FancyWindow>
