--- a/Content.Client/SS220/CluwneComms/UI/CluwneCommsConsoleMenu.xaml
+++ b/Content.Client/SS220/CluwneComms/UI/CluwneCommsConsoleMenu.xaml
@@ -12,7 +12,7 @@
                 <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
                     <ui220:ExtendedTextEdit Name="InstructionInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
                     <OptionButton Name="AlertLevelButton" StyleClasses="OpenRight" Access="Public" />
-                    <Button Name="CodeButton" Text="{Loc 'cluwne-comms-console-menu-code-button'}" StyleClasses="OpenLeft" Access="Public" />
+                    <Button Name="AlertButton" Text="{Loc 'cluwne-comms-console-menu-code-button'}" StyleClasses="OpenLeft" Access="Public" />
                 </BoxContainer>
             </BoxContainer>
             <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
