--- a/Content.Client/SS220/CluwneComms/UI/CluwneCommsConsoleMenu.xaml
+++ b/Content.Client/SS220/CluwneComms/UI/CluwneCommsConsoleMenu.xaml
@@ -7,7 +7,7 @@
         <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin="5">
             <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
                 <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
-                    <ui220:ExtendedTextEdit Name="CodeInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
+                    <ui220:ExtendedTextEdit Name="AlertInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
                 </BoxContainer>
                 <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
                     <ui220:ExtendedTextEdit Name="InstructionInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
