--- a/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
+++ b/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
@@ -40,6 +40,8 @@
                     <Label Name="TemperatureLabel" />
                     <Label Text="{Loc 'health-analyzer-window-entity-blood-level-text'}" />
                     <Label Name="BloodLabel" />
+                    <Label Text="{Loc 'health-analyzer-window-entity-death-counter-text'}" />
+                    <Label Name="DeathLabel" />
                     <Label Text="{Loc 'health-analyzer-window-entity-damage-total-text'}" />
                     <Label Name="DamageLabel" />
                 </GridContainer>
