--- a/Content.Client/SS220/CluwneComms/UI/CluwneCommsConsoleMenu.xaml
+++ b/Content.Client/SS220/CluwneComms/UI/CluwneCommsConsoleMenu.xaml
@@ -2,18 +2,16 @@
     xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
     xmlns:ui220="clr-namespace:Content.Client.SS220.UserInterface"
     Title="{Loc 'cluwne-comms-console-menu-title'}"
-    MinSize="400 225">
+    MinSize="800 300">
     <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="5">
-        <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin="5">
+        <BoxContainer Orientation="Horizontal" HorizontalExpand="True" VerticalExpand="True" Margin="5">
             <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
-                <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
-                    <ui220:ExtendedTextEdit Name="AlertInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
-                </BoxContainer>
-                <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
-                    <ui220:ExtendedTextEdit Name="InstructionInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
-                    <OptionButton Name="AlertLevelButton" StyleClasses="OpenRight" Access="Public" />
-                    <Button Name="AlertButton" Text="{Loc 'cluwne-comms-console-menu-code-button'}" StyleClasses="OpenLeft" Access="Public" />
-                </BoxContainer>
+                <ui220:ExtendedTextEdit Name="AlertInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
+                <OptionButton Name="AlertLevelButton" StyleClasses="OpenRight" Access="Public" />
+            </BoxContainer>
+            <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
+                <ui220:ExtendedTextEdit Name="InstructionInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
+                <Button Name="AlertButton" Text="{Loc 'cluwne-comms-console-menu-code-button'}" StyleClasses="OpenLeft" Access="Public" />
             </BoxContainer>
             <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="5">
                 <ui220:ExtendedTextEdit Name="MessageInput" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 0 5" MinHeight="100" />
