Add "Extended" access button to ID console
# Conflicts:
#	.github/workflows/update-wiki.yml
#	Content.Client/Chat/UI/EmotesMenu.xaml.cs
#	Content.Client/Corvax/DiscordAuth/DiscordAuthManager.cs
#	Content.Client/Corvax/JoinQueue/QueueGui.xaml.cs
#	Content.Client/Corvax/JoinQueue/QueueState.cs
#	Content.Client/Corvax/TTS/HumanoidProfileEditor.TTS.cs
#	Content.Client/Corvax/TTS/TTSSystem.cs
#	Content.Client/RCD/RCDMenu.xaml
#	Content.Server/Corvax/ChatFilter/ChatSystem.cs
#	Content.Server/Corvax/DiscordAuth/DiscordAuthManager.cs
#	Content.Server/Corvax/JoinQueue/JoinQueueManager.cs
#	Content.Server/Corvax/RoundNotifications/RoundNotificationsSystem.cs
#	Content.Server/Corvax/TTS/TTSManager.cs
#	Content.Server/Corvax/TTS/TTSSystem.cs
#	Content.Server/Corvax/TTS/VoiceMaskSystem.TTS.cs
#	Content.Shared/Corvax/Sponsors/MsgSponsorInfo.cs
#	Content.Shared/Corvax/TTS/PlayTTSEvent.cs
#	Content.Shared/Corvax/TTS/TTSComponent.cs
#	Resources/Audio/Announcements/license.txt
#	Resources/Audio/Effects/Shuttle/licenses.txt
#	Resources/Changelog/ChangelogSyndie.yml
#	Resources/Locale/en-US/ss14-ru/prototypes/body/organs/animal/slimes.ftl
#	Resources/Locale/en-US/ss14-ru/prototypes/entities/objects/weapons/guns/ammunition/cartridges/hrifle.ftl
#	Resources/Locale/en-US/ss14-ru/prototypes/entities/structures/furniture/instruments.ftl
#	Resources/Locale/en-US/ss14-ru/prototypes/entities/structures/machines/nuke.ftl
#	Resources/Locale/ru-RU/actions/actions/hardsuit.ftl
#	Resources/Locale/ru-RU/corvax/prototypes/structures/storage/tanks/tanks.ftl
#	Resources/Locale/ru-RU/corvax/round-notifications/notifications.ftl
#	Resources/Locale/ru-RU/game-ticking/game-presets/preset-pirates.ftl
#	Resources/Locale/ru-RU/objectives/conditions/escape-shuttle-condition.ftl
#	Resources/Locale/ru-RU/objectives/conditions/kill-person-condition.ftl
#	Resources/Locale/ru-RU/prototypes/catalog/cargo/cargo-shuttle.ftl
#	Resources/Locale/ru-RU/prototypes/catalog/cargo/cargo-vending.ftl
#	Resources/Locale/ru-RU/ro

--- a/Content.Client/Access/UI/IdCardConsoleWindow.xaml
+++ b/Content.Client/Access/UI/IdCardConsoleWindow.xaml
@@ -27,8 +27,13 @@
         </GridContainer>
         <Control MinSize="0 8" />
         <GridContainer Columns="2">
-            <Label Text="{Loc 'id-card-console-window-job-selection-label'}" />
-            <OptionButton Name="JobPresetOptionButton" />
+            <!-- SS220-ID console extended access button-Begin -->
+            <BoxContainer HorizontalExpand="True">
+                <Label Text="{Loc 'id-card-console-window-job-selection-label'}" />
+                <OptionButton Name="JobPresetOptionButton" />
+            </BoxContainer>
+            <Button Text="{Loc 'id-card-console-window-extended-access-button'}" Name="ExtendedAccessButton" />
+            <!-- SS220-ID console extended access button-End -->
         </GridContainer>
         <Control Name="AccessLevelControlContainer" />
     </BoxContainer>
