--- a/Content.Client/SS220/Surgery/Ui/SurgeryDrapeMenu.xaml
+++ b/Content.Client/SS220/Surgery/Ui/SurgeryDrapeMenu.xaml
@@ -43,10 +43,8 @@
             <BoxContainer Orientation="Vertical">
                 <PanelContainer StyleClasses="LowDivider" />
                 <BoxContainer Orientation="Horizontal" Margin="10 2 5 0" VerticalAlignment="Bottom">
-                    <!-- TODO: add confirm footer -->
                     <Label Name="FooterLeft" Text="{Loc 'surgery-footer-idle'}" StyleClasses="WindowFooterText" />
-                    <!-- TODO -->
-                    <Label Text="{Loc 'smObserver-footer-right'}" StyleClasses="WindowFooterText"
+                    <Label Text="{Loc 'surgery-footer-right'}" StyleClasses="WindowFooterText"
                             HorizontalAlignment="Right" HorizontalExpand="True"  Margin="0 0 5 0" />
                     <TextureRect StyleClasses="NTLogoDark" Stretch="KeepAspectCentered"
                             VerticalAlignment="Center" HorizontalAlignment="Right" SetSize="19 19"/>
