--- a/Content.Client/SS220/Surgery/BodyAnalyzerUi/BodyAnalyzerMenu.xaml
+++ b/Content.Client/SS220/Surgery/BodyAnalyzerUi/BodyAnalyzerMenu.xaml
@@ -5,11 +5,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
     xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-    xmlns:surgery="clr-namespace:Content.Client.SS220.Surgery.SurgeryStartUi"
     xmlns:surgeryUiParts="clr-namespace:Content.Client.SS220.Surgery.UiParts"
     Title="{Loc 'surgery-observer-title'}"
     Resizable="False"
-    MinSize="448 384"
+    SetSize="920 384"
     RectClipContent="False">
     <Control>
         <PanelContainer>
@@ -17,15 +16,15 @@
                 <gfx:StyleBoxFlat BackgroundColor="#1B1B1E"/>
             </PanelContainer.PanelOverride>
         </PanelContainer>
-        <BoxContainer Name="ContentContainer" Orientation="Horizontal">
-            <BoxContainer Name="PatientInfo" Orientation="Vertical">
-                <surgeryUiParts:PatientStatus Name="PatientStatus" Orientation="Vertical"/>
-                <surgeryUiParts:TreatmentSuggestion Name="TreatmentSuggestion" Orientation="Vertical"/>
+        <BoxContainer Name="ContentBoxContainer" Orientation="Horizontal">
+            <BoxContainer Name="PatientInfo" Orientation="Vertical" SetSize="460 360">
+                <surgeryUiParts:PatientStatus Name="PatientStatus" HorizontalExpand="False" VerticalExpand="True"/>
+                <surgeryUiParts:TreatmentSuggestion Name="TreatmentSuggestion" HorizontalExpand="False"  VerticalExpand="True"/>
             </BoxContainer>
-            <BoxContainer Name="Handbook" Orientation="Vertical">
-                <surgeryUiParts:OperationList Name="OperationList" Orientation="Vertical" VerticalExpand="True"/>
-                <surgeryUiParts:OperationDescription Name="OperationDescription" Orientation="Vertical" Visible ="False"
-                    VerticalAlignment="Bottom"/>
+            <BoxContainer Name="HandBook" Orientation="Vertical" SetSize="460 360">
+                <surgeryUiParts:OperationList Name="OperationList" VerticalExpand="True" HorizontalExpand="False"/>
+                <surgeryUiParts:OperationDescription Name="OperationDescription" Visible ="False"
+                    VerticalAlignment="Stretch" HorizontalExpand="False"  VerticalExpand="True"/>
             </BoxContainer>
         </BoxContainer>
     </Control>
