--- a/Content.Client/SS220/Surgery/UiParts/OperationList.xaml
+++ b/Content.Client/SS220/Surgery/UiParts/OperationList.xaml
@@ -12,18 +12,19 @@
                 <gfx:StyleBoxFlat BackgroundColor="#1B1B1E"/>
             </PanelContainer.PanelOverride>
         </PanelContainer>
-        <!-- Search label and auto indexing of all available operations -->
-        <RichTextLabel Name="HeaderText" Text="{Loc 'operation-list-header'}"/>
-        <ScrollContainer Name="OperationScroll" HScrollEnabled="False"
-            HorizontalExpand="True" VerticalExpand="True" MouseFilter="Pass">
-            <BoxContainer
-                Name="OperationContainer"
-                Orientation="Vertical"
-                SizeFlagsStretchRatio="2"
-                HorizontalExpand="True"
-                VerticalExpand="True">
-                <!--  operations are added here by code  -->
-            </BoxContainer>
-        </ScrollContainer>
+        <BoxContainer Orientation="Vertical">
+            <RichTextLabel Name="HeaderText" Text="{Loc 'operation-list-header'}"/>
+            <ScrollContainer Name="OperationScroll" HScrollEnabled="False"
+                HorizontalExpand="True" VerticalExpand="True" MouseFilter="Pass">
+                <BoxContainer
+                    Name="OperationContainer"
+                    Orientation="Vertical"
+                    SizeFlagsStretchRatio="2"
+                    HorizontalExpand="True"
+                    VerticalExpand="True">
+                    <!--  operations are added here by code  -->
+                </BoxContainer>
+            </ScrollContainer>
+        </BoxContainer>
     </Control>
 </surgeryUiParts:OperationList>
