--- a/Content.Client/SS220/Surgery/UiParts/PatientStatus.xaml
+++ b/Content.Client/SS220/Surgery/UiParts/PatientStatus.xaml
@@ -12,14 +12,17 @@
                 <gfx:StyleBoxFlat BackgroundColor="#1B1B1E"/>
             </PanelContainer.PanelOverride>
         </PanelContainer>
-        <!-- Just lines of status like dead/alive/crit. Overall damage / brain damage. Keep it simple -->
-        <RichTextLabel Name="HeaderText" Text="{Loc 'patient-status-header'}"/>
-        <BoxContainer Name="TextDataContainer" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10 5 0 5">
-            <RichTextLabel Name="MobStatus" Text="mob-status" HorizontalExpand="True" />
-            <RichTextLabel Name="OverallDamage" Text="overall-damage" HorizontalExpand="True"/>
-            <RichTextLabel Name="DecayDegree" Text="decay-degree" HorizontalExpand="True"/>
-        <!-- LOOK AT THIS DUUUDE ↓↓↓↓↓↓↓↓ -->
-            <RichTextLabel Name="BrainRotStatus" Text="brain-rot-status" HorizontalExpand="True"/>
+        <BoxContainer Orientation="Vertical" VerticalExpand="True">
+            <!-- Just lines of status like dead/alive/crit. Overall damage / brain damage. Keep it simple -->
+            <RichTextLabel Name="HeaderText" Text="{Loc 'patient-status-header'}"/>
+            <BoxContainer Name="TextDataContainer"  Orientation="Vertical" VerticalAlignment="Top"
+                VerticalExpand="True" HorizontalAlignment="Left" Margin="10 5 0 5">
+                <RichTextLabel Name="MobStatus" Text="mob-status" HorizontalExpand="True" />
+                <RichTextLabel Name="OverallDamage" Text="overall-damage" HorizontalExpand="True"/>
+                <RichTextLabel Name="DecayDegree" Text="decay-degree" HorizontalExpand="True"/>
+            <!-- LOOK AT THIS DUUUDE ↓↓↓↓↓↓↓↓ -->
+                <RichTextLabel Name="BrainRotStatus" Text="brain-rot-status" HorizontalExpand="True"/>
+            </BoxContainer>
         </BoxContainer>
     </Control>
 </surgeryUiParts:PatientStatus>
