--- a/Content.Client/SS220/Cartridges/Messenger/MessengerUiMessageItem.xaml
+++ b/Content.Client/SS220/Cartridges/Messenger/MessengerUiMessageItem.xaml
@@ -1,4 +1,4 @@
-<messenger:MessengerUiMessageItem xmlns:messenger="clr-namespace:Content.Client.CartridgeLoader.Cartridges.Messenger"
+<messenger:MessengerUiMessageItem xmlns:messenger="clr-namespace:Content.Client.SS220.Cartridges.Messenger"
                                   xmlns="https://spacestation14.io" Margin="1 0 2 0">
     <PanelContainer StyleClasses="BackgroundDark"></PanelContainer>
     <PanelContainer Name="MessageContainer" Access="Public" Margin="2 5 2 5" StyleClasses="Inset" VerticalAlignment="Center" VerticalExpand="True" HorizontalExpand="True">
