--- a/Content.Client/SS220/Zones/UI/ZoneDataEntry.xaml
+++ b/Content.Client/SS220/Zones/UI/ZoneDataEntry.xaml
@@ -1,19 +1,24 @@
-<Collapsible xmlns="https://spacestation14.io"
+<BoxContainer xmlns="https://spacestation14.io"
              xmlns:customControls="clr-namespace:Content.Client.Administration.UI.CustomControls"
-             Orientation="Vertical">
-    <CollapsibleHeading Name="Heading">
-        <ContainerButton Name="ParentButton">
-            <PanelContainer Name="ParentBackgroundPanel">
+             Orientation="Vertical"
+             HorizontalExpand="True"
+             MinSize="60 20">
+    <BoxContainer Name="Heading" Orientation="Horizontal" HorizontalExpand="True">
+        <ContainerButton Name="CollapseButton">
+            <TextureRect Name="CollapseButtonTexture"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 0"/>
+        </ContainerButton>
+        <ContainerButton Name="ParentButton" HorizontalExpand="True">
+            <PanelContainer Name="ParentBackgroundPanel" HorizontalExpand="True">
                 <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
                     <Label Name="ParentIDLabel"/>
-                    <customControls:VSeparator/>
+                    <customControls:VSeparator Margin="5 0"/>
                     <Label Name="ParentNameLabel"  HorizontalExpand="True"/>
                 </BoxContainer>
             </PanelContainer>
         </ContainerButton>
-    </CollapsibleHeading>
-    <CollapsibleBody>
-        <BoxContainer Name="ZonesContainer" Orientation="Horizontal">
+    </BoxContainer>
+    <BoxContainer Name="Collapsible" Orientation="Vertical" Margin="10 0 0 0" HorizontalExpand="True">
+        <BoxContainer Name="ZonesContainer" Orientation="Vertical" HorizontalExpand="True">
         </BoxContainer>
-    </CollapsibleBody>
-</Collapsible>
+    </BoxContainer>
+</BoxContainer>
