--- a/Content.Client/SS220/Zones/UI/ZoneEntry.xaml
+++ b/Content.Client/SS220/Zones/UI/ZoneEntry.xaml
@@ -1,12 +1,12 @@
 <ContainerButton xmlns="https://spacestation14.io"
                  xmlns:customControls="clr-namespace:Content.Client.Administration.UI.CustomControls"
-                 Orientation="Vertical">
-    <PanelContainer Name="BackgroundPanel">
+                 HorizontalExpand="True">
+    <PanelContainer Name="BackgroundPanel" HorizontalExpand="True">
         <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
             <Label Name="IDLabel" MinSize="30 15"/>
-            <customControls:VSeparator/>
+            <customControls:VSeparator Margin="5 0"/>
             <Label Name="NameLabel" HorizontalExpand="True" MinSize="50 15"/>
-            <customControls:VSeparator/>
+            <customControls:VSeparator Margin="5 0"/>
             <Button Name="SelectButton" Text="{Loc zone-entry-select-button}" Access="Public"/>
         </BoxContainer>
     </PanelContainer>
