--- a/Content.Client/SS220/Zones/UI/ZoneContainerEntry.xaml
+++ b/Content.Client/SS220/Zones/UI/ZoneContainerEntry.xaml
@@ -7,18 +7,18 @@
         <ContainerButton Name="CollapseButton">
             <TextureRect Name="CollapseButtonTexture"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 0"/>
         </ContainerButton>
-        <ContainerButton Name="ParentButton" HorizontalExpand="True">
-            <PanelContainer Name="ParentBackgroundPanel" HorizontalExpand="True">
+        <ContainerButton Name="ContainerButton" HorizontalExpand="True">
+            <PanelContainer Name="ContainerBackgroundPanel" HorizontalExpand="True">
                 <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
-                    <Label Name="ParentIDLabel"/>
+                    <Label Name="ContainerIDLabel"/>
                     <customControls:VSeparator Margin="5 0"/>
-                    <Label Name="ParentNameLabel"  HorizontalExpand="True"/>
+                    <Label Name="ContainerNameLabel"  HorizontalExpand="True"/>
                 </BoxContainer>
             </PanelContainer>
         </ContainerButton>
     </BoxContainer>
     <BoxContainer Name="Collapsible" Orientation="Vertical" Margin="10 0 0 0" HorizontalExpand="True">
-        <BoxContainer Name="ZonesContainer" Orientation="Vertical" HorizontalExpand="True">
+        <BoxContainer Name="ZonesBox" Orientation="Vertical" HorizontalExpand="True">
         </BoxContainer>
     </BoxContainer>
 </BoxContainer>
