--- a/Content.Client/SS220/Zones/UI/ZoneContainerEntry.xaml
+++ b/Content.Client/SS220/Zones/UI/ZoneContainerEntry.xaml
@@ -7,18 +7,18 @@
         <ContainerButton Name="CollapseButton">
             <TextureRect Name="CollapseButtonTexture"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 0"/>
         </ContainerButton>
-        <ContainerButton Name="ContainerButton" HorizontalExpand="True">
+        <ContainerButton Name="ZoneContainerButton" HorizontalExpand="True">
             <PanelContainer Name="ContainerBackgroundPanel" HorizontalExpand="True">
-                <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
+                <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin="5 0">
                     <Label Name="ContainerIDLabel"/>
-                    <customControls:VSeparator Margin="5 0"/>
+                    <customControls:VSeparator Margin="10 0"/>
                     <Label Name="ContainerNameLabel"  HorizontalExpand="True"/>
                 </BoxContainer>
             </PanelContainer>
         </ContainerButton>
     </BoxContainer>
-    <BoxContainer Name="Collapsible" Orientation="Vertical" Margin="10 0 0 0" HorizontalExpand="True">
-        <BoxContainer Name="ZonesBox" Orientation="Vertical" HorizontalExpand="True">
+    <BoxContainer Name="CollapsibleBox" Orientation="Vertical" Margin="10 0 0 0" HorizontalExpand="True">
+        <BoxContainer Name="ZonesBox" Orientation="Vertical" HorizontalExpand="True" Margin="20 0 0 0">
         </BoxContainer>
     </BoxContainer>
 </BoxContainer>
