--- a/Content.Client/SS220/Zones/UI/ZoneParamsPanel.xaml
+++ b/Content.Client/SS220/Zones/UI/ZoneParamsPanel.xaml
@@ -1,41 +1,38 @@
 <PanelContainer xmlns="https://spacestation14.io"
                 HorizontalExpand="True"
                 VerticalExpand="True"
-                MinSize="250 200">
-    <BoxContainer Orientation="Vertical" Margin="5" VerticalAlignment="Top" HorizontalExpand="True" VerticalExpand="True">
-        <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
-            <Label Text="{Loc zone-state-box-name-label}" />
-            <LineEdit Name="NameLineEdit" HorizontalExpand="True"/>
+                MinSize="300 300">
+    <BoxContainer Name="MainBox" Orientation="Vertical" Margin="5" HorizontalExpand="True" VerticalExpand="True">
+        <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin ="5 2">
+            <Label Text="{Loc zone-state-box-name-label}"/>
+            <LineEdit Name="NameLineEdit" HorizontalExpand="True" Margin="10 0 0 0"/>
         </BoxContainer>
-        <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
-            <Label Text="{Loc zone-state-box-prototype-id-label}" />
-            <LineEdit Name="PrototypeIDLineEdit" HorizontalExpand="True"/>
+        <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin ="5 2">
+            <Label Text="{Loc zone-state-box-prototype-id-label}"/>
+            <LineEdit Name="PrototypeIDLineEdit" HorizontalExpand="True" Margin="10 0 0 0"/>
         </BoxContainer>
-        <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
-            <Label Text="{Loc zone-state-box-hex-color-label}" />
-            <LineEdit Name="HexColorLineEdit" HorizontalExpand="True"/>
+        <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin ="5 2">
+            <Label Text="{Loc zone-state-box-hex-color-label}"/>
+            <LineEdit Name="HexColorLineEdit" HorizontalExpand="True" Margin="10 0 0 0"/>
         </BoxContainer>
-        <Collapsible Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" MaxHeight="160">
-            <CollapsibleHeading Title="{Loc zone-state-box-size-options-heading}" HorizontalExpand="True"/>
-            <CollapsibleBody HorizontalExpand="True" VerticalExpand="True">
-                <PanelContainer Name="SizeOptionsBackground" HorizontalExpand="True" VerticalExpand="True">
-                    <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True">
-                        <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
-                            <Label Text="{Loc zone-state-box-container-net-id-label}" />
-                            <LineEdit Name="ContainerNetIDLineEdit" HorizontalExpand="True"/>
+        <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin ="5 2">
+            <Label Text="{Loc zone-state-box-container-net-id-label}"/>
+            <LineEdit Name="ContainerNetIDLineEdit" HorizontalExpand="True" Margin="10 0 0 0"/>
+        </BoxContainer>
+        <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin ="5 2">
+            <Collapsible Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True">
+                <CollapsibleHeading Title="{Loc zone-state-box-size-options-heading}" HorizontalExpand="True"/>
+                <CollapsibleBody HorizontalExpand="True" VerticalExpand="True">
+                    <PanelContainer Name="SizeOptionsBackground" HorizontalExpand="True" VerticalExpand="True">
+                        <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True">
+                            <ScrollContainer HorizontalExpand="True" VerticalExpand="True">
+                                <BoxContainer Name="Box2ListContainer" Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True"/>
+                            </ScrollContainer>
+                            <Button Name="AddBoxButton" Text="{Loc zone-state-box-add-box-button}" Access="Public" Margin="5 5 5 0"/>
                         </BoxContainer>
-                        <PanelContainer Name="Box2ListBackground" HorizontalExpand="True" VerticalExpand="True" MinHeight="100">
-                            <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True">
-                                <ScrollContainer HorizontalExpand="True" VerticalExpand="True">
-                                    <BoxContainer Name="Box2ListContainer"  Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True">
-                                    </BoxContainer>
-                                </ScrollContainer>
-                                <Button Name="AddBoxButton" Text="{Loc zone-state-box-add-box-button}" Access="Public" />
-                            </BoxContainer>
-                        </PanelContainer>
-                    </BoxContainer>
-                </PanelContainer>
-            </CollapsibleBody>
-        </Collapsible>
+                    </PanelContainer>
+                </CollapsibleBody>
+            </Collapsible>
+        </BoxContainer>
     </BoxContainer>
 </PanelContainer>
