--- a/Content.Client/SS220/Zones/UI/ZonesControlWindow.xaml
+++ b/Content.Client/SS220/Zones/UI/ZonesControlWindow.xaml
@@ -1,6 +1,7 @@
 <DefaultWindow xmlns="https://spacestation14.io"
                Title="{Loc zones-control-window-name}"
-               MinSize="600 300">
+               MinSize="600 300"
+               SetSize="700 350">
     <BoxContainer Orientation="Horizontal" VerticalExpand="True" HorizontalExpand="True">
         <BoxContainer Name="MainBox" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
             <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
@@ -9,13 +10,12 @@
                 <Button Name="OverlayButton" Text="{Loc zones-control-overlay-button}" Access="Public" ToggleMode="True"/>
             </BoxContainer>
             <PanelContainer Name="ZoneDataPanel" VerticalExpand="True" HorizontalExpand="True">
-                <ScrollContainer>
-                    <BoxContainer Name="ZonesContainersContainer" Orientation="Vertical"/>
+                <ScrollContainer VerticalExpand="True" HorizontalExpand="True">
+                    <BoxContainer Name="ZonesContainersContainer" Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True"/>
                 </ScrollContainer>
             </PanelContainer>
-            <Button Name="CreateZoneButton" Text="{Loc zones-control-create-zone-button}" Access="Public"/>
+            <Button Name="CreateZoneButton" Text="{Loc zones-control-create-zone-button}" Access="Public" HorizontalExpand="True"/>
         </BoxContainer>
-        <BoxContainer Name="OptionsBox" VerticalExpand="True" Visible="False" Margin="5 0 0 0">
-        </BoxContainer>
+        <PanelContainer Name="OptionsPanel" VerticalExpand="True" Visible="False" Margin="5 0 0 0"/>
     </BoxContainer>
 </DefaultWindow>
