--- a/Content.Client/SS220/Zones/UI/ZoneParamsPanel.xaml
+++ b/Content.Client/SS220/Zones/UI/ZoneParamsPanel.xaml
@@ -26,7 +26,10 @@
                     <LineEdit Name="ContainerNetIDLineEdit" HorizontalExpand="True" Margin="10 0 0 0"/>
                 </BoxContainer>
                 <CheckBox Name="AttachToGridCheckbox" Text="{Loc zone-state-box-attach-to-grid-check-box}" LeftAlign="False" />
-                <CheckBox Name="CutSpaceCheckbox" Text="{Loc zone-state-box-cut-space-check-box}" LeftAlign="False" />
+                <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin ="5 2">
+                    <Label Text="{Loc zone-state-box-cut-space-option-label}" HorizontalExpand="True"/>
+                    <OptionButton Name="CutSpaceOptionSelector" Margin="10 0 0 0"/>
+                </BoxContainer>
             </BoxContainer>
         </BoxContainer>
         <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True" Margin ="5 2">
